# rustymath-calculator

./: .gitignore  Cargo.toml  README.md  index.html
src/: lib.rs
src/components/: calculator.rs  input.rs  mod.rs
